@@ -19,6 +19,9 @@ Changes in 0.62.13:
     requests.
   * Install bucket handling didn't work well for collection which weren't
     fully installed
+  * The Metadata SQL query has been reworked to join tables in a much
+    better order, speeding up the getMetadata call on a repository
+    with many versions much faster.
 
 Changes in 0.62.12:
   * Conary will no longer create a "rootroot" group while installing
